Make sure Services Provided text doesn't overlap on screens smaller than iPhone 6s

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -122,6 +122,19 @@ section {
     font-size: 30px;
     text-align: left;
   }
+  .item {
+    min-height: 350px;
+  }
+  @media (min-width: 375px) {
+    .item {
+      min-height: inherit;
+    }
+  }
+  @media (min-width: 768px) {
+    .item {
+      min-height: 150px;
+    }
+  }
 }
 
 .section-title {
